--- a/assets/manifest-XAiiGjOX.json
+++ b/assets/manifest-XAiiGjOX.json
@@ -1,8 +1,8 @@
-
 {
   "name": "InstaBill India",
   "short_name": "InstaBill",
-  "start_url": ".",
+  "start_url": "/instabill/",      
+  "scope": "/instabill/",          
   "display": "standalone",
   "background_color": "#f3f4f6",
   "theme_color": "#4f46e5",
