--- a/assets/manifest-CtW70KZw.json
+++ b/assets/manifest-CtW70KZw.json
@@ -1,8 +1,8 @@
+
 {
   "name": "InstaBill India",
   "short_name": "InstaBill",
-  "start_url": "/instabill/",      
-  "scope": "/instabill/",          
+  "start_url": ".",
   "display": "standalone",
   "background_color": "#f3f4f6",
   "theme_color": "#4f46e5",
