--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,19 @@
-
 {
-  "name": "InstaBill India",
+  "name": "InstaBill",
   "short_name": "InstaBill",
-  "start_url": ".",
+  "start_url": "/instabill/",
+  "scope": "/instabill/",
   "display": "standalone",
-  "background_color": "#f3f4f6",
-  "theme_color": "#4f46e5",
-  "orientation": "portrait",
+  "background_color": "#ffffff",
+  "theme_color": "#ffffff",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/1261/1261163.png",
+      "src": "/instabill/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/1261/1261163.png",
+      "src": "/instabill/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
